cluster/homelab/apps/media-managers/limit-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-overseerr
  namespace: media-managers
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - protocol: TCP
          port: 8989
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - protocol: TCP
          port: 7878
    - to:
        - ipBlock:
            cidr: 203.12.8.19/32
      ports:
        - protocol: TCP
          port: 32400
